commit before remake