@@ -1,12 +1,9 @@
 package com.ofrancome.petanque.app.controller;
 
 import com.ofrancome.petanque.app.dto.requests.PlayerCreationDto;
+import com.ofrancome.petanque.app.dto.responses.GameDto;
 import com.ofrancome.petanque.app.dto.responses.PlayerDto;
-import com.ofrancome.petanque.domain.players.Player;
-import com.ofrancome.petanque.domain.players.PlayerService;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import com.ofrancome.petanque.domain.api.PlayerService;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -18,8 +15,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("players")
@@ -33,7 +28,7 @@ public class PlayerController {
 
     @GetMapping
     public ResponseEntity<List<PlayerDto>> getAllPlayers() {
-        return ResponseEntity.ok(playerService.retrievePlayers().stream().map(PlayerDto::from).collect(Collectors.toList()));
+        return ResponseEntity.ok(playerService.retrievePlayers().stream().map(PlayerDto::from).toList());
     }
 
     @GetMapping("/{name}")
@@ -45,5 +40,12 @@ public class PlayerController {
     @PostMapping
     public ResponseEntity<PlayerDto> addPlayer(@Valid @RequestBody PlayerCreationDto playerCreationDto) {
         return ResponseEntity.ok(PlayerDto.from(playerService.addPlayer(playerCreationDto.getName())));
+    }
+
+    @GetMapping("/{name}/games")
+    public ResponseEntity<List<GameDto>> getAllGamesForPlayer(@PathVariable("name") String name) {
+        return playerService.getAllGamesFor(name).map(games ->
+                        ResponseEntity.ok(games.stream().map(GameDto::from).toList()))
+                            .orElseGet(() -> ResponseEntity.notFound().build());
     }
 }
